# Casting-Defect-Detection

./: .gitignore  README.md  pyproject.toml  run.py
src/evaluation/: metrics.py
src/model/: dataset.py  resnet.py  train.py
src/preprocessing/: apply_clahe.py  extract_mask.py  generate_splits.py
src/utils/: utils.py
src/visualization/: visualize_preprocessing.py
