[project]
name = "casting-defect-detection"
version = "0.1.0"
description = "This project uses an industrial casting product image dataset to train a deep learning model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
